# tiny-gea-api

./: .gitignore  CMakeLists.txt  Makefile  README.md  library.json
.github/workflows/: test.yml
include/: i_mqtt_client.h  i_tiny_erd_client.h  i_tiny_gea2_erd_client.h  i_tiny_gea3_erd_client.h  i_tiny_gea3_interface.h  i_tiny_gea_interface.h  mqtt_bridge.h  tiny_erd_client.h  tiny_gea2_erd_api.h  tiny_gea2_erd_client.h  tiny_gea2_interface.h  tiny_gea2_single_wire_interface.h  tiny_gea3_constants.h  tiny_gea3_interface.h  tiny_gea3_packet.h  tiny_geaX_constants.h  tiny_gea_packet.h  tiny_queue.h
src/: mqtt_bridge.cpp  tiny_erd_client.c  tiny_gea2_erd_client.c  tiny_gea2_interface.c  tiny_gea2_single_wire_interface.c  tiny_gea3_erd_client.c  tiny_gea3_interface.c
test/include/double/: mqtt_client_double.hpp  tiny_erd_client_double.hpp  tiny_gea3_erd_client_double.hpp  tiny_gea3_interface_double.hpp  tiny_gea_interface_double.hpp
test/src/: tiny_erd_client_double.cpp  tiny_gea3_erd_client_double.cpp  tiny_gea3_interface_double.cpp  tiny_gea_interface_double.cpp
test/src/double/: mqtt_client_double.cpp  tiny_gea3_interface_double.cpp
test/tests/: mqtt_bridge_test.cpp  tiny_erd_client_test.cpp  tiny_gea2_erd_client_test.cpp  tiny_gea2_interface_single_wire_test.cpp  tiny_gea2_interface_test.cpp  tiny_gea3_erd_client_test.cpp  tiny_gea3_interface_test.cpp
